--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 asgiref==3.6.0
 boto3==1.26.107
 botocore==1.29.107
+crispy-bootstrap4==2022.1
 dj-database-url==0.5.0
 Django==3.2
 django-allauth==0.41.0
+django-crispy-forms==2.0
 django-storages==1.13.2
 gunicorn==20.1.0
 jmespath==1.0.1
