--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,16 @@ dj-database-url==0.5.0
 Django==3.2
 django-allauth==0.41.0
 django-crispy-forms==2.0
+django-extensions==3.2.1
 django-storages==1.13.2
+graphviz==0.20.1
 gunicorn==20.1.0
 jmespath==1.0.1
 oauthlib==3.2.2
 Pillow==9.4.0
 psycopg2==2.9.6
+pydot==1.4.2
+pyparsing==3.0.9
 python3-openid==3.2.0
 pytz==2022.7.1
 requests-oauthlib==1.3.1
